kubernetes/extra/knowledgeretriever-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: knowledgeretriever-ingress
  namespace: dev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '1800'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '1800'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '1800'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: '100m'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kr.inetumnlpcluster.com
      secretName: kr-certificate-secret
  rules:
    - host: kr.inetumnlpcluster.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: knowledgeretriever
                port:
                  number: 80
